# computational-physics-stuff

./: Cargo.toml
src/: main.rs  math.rs  unit1_project.rs  utils.rs
src/unit2/: aitken.rs
src/unit6_approximation/: aitken.rs  mod.rs
src/unit6_approximation2/: aitken2.rs  mod.rs
