[package]
name = "computational-physics-stuff"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.16.1"
parry3d = { version = "0.24.0", optional = true }
parry2d = { version = "0.24.0", optional = true }
nalgebra = { version = "*" , features = ["convert-glam029"]}
bevy_flycam = "0.16.1"
rand = "*"
# Enable when in release mode to increase runtime performance
#log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[features]
default = ["dim2"]
dim2 = ["dep:parry2d"]
dim3 = ["dep:parry3d"]